# build/docker/swagger/docs/swagger.json
@@ -231,9 +231,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully updated book",
+                        "description": "book by author has been updated successfully",
                         "schema": {
-                            "$ref": "#/definitions/books.Book"
+                            "type": "string"
                         }
                     },
                     "500": {
